--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -323,3 +323,15 @@ footer a {
 #level-chain-wrapper::-webkit-scrollbar {
   display: none;
 }
+#scrollTopBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  border: none;
+  padding: 10px 12px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 9999;
+}
+
